--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,9 @@
 [tool:pytest]
+markers =
+    asyncio: marks tests as async
+addopts = -v --tb=short
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
-markers =
-    unit: Unit tests
-    integration: Integration tests
-    performance: Performance tests
+asyncio_mode = auto
